--- a/style.css
+++ b/style.css
@@ -1,13 +1,58 @@
 body{
   background-color: beige;
 }
+
+@keyframes topFadeIn {
+      0% {
+        position: absolute;
+        top: -3rem;
+        opacity: 0;
+      }
+
+      100% {
+        position: absolute;
+        top: 0%;
+        opacity: 1;
+      }
+
+}
+
+@keyframes leftFadeIn {
+      0% {
+        position: absolute;
+        left: -5rem;
+        opacity: 0;
+      }
+      100% {
+        position: absolute;
+        left: 0%;
+        opacity: 1;
+      }
+}
+
 .container-fluid {
   font-family: 'Open Sans', sans-serif;
   background-color: transparent;
 }
 
-.homepage-text {
+.animated-text{
+  text-align: left;
+  text-align-last: left;
+}
+
+.hello-text {
   font-family: 'Open Sans', sans-serif;
-  margin-left: 220px;
+  margin-left: 20%;
   margin-top: 200px;
+  animation-name: topFadeIn;
+  animation-duration: 1s;
+}
+
+.welcome-text {
+  font-family: 'Open Sans', sans-serif;
+  margin-left: 20%;
+  animation-name: leftFadeIn;
+  animation-fill-mode: both;
+  animation-delay: 1s;
+  animation-duration: 1s;
 }
