--- a/style.css
+++ b/style.css
@@ -1,5 +1,10 @@
-body{
-  background-color: beige;
+#background {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    left: 0px;
+    top: 0px;
+    z-index: -1; /* Ensure div tag stays behind content; -999 might work, too. */
 }
 
 @keyframes topFadeIn {
@@ -43,6 +48,7 @@ body{
 .hello-text {
   font-family: 'Open Sans', sans-serif;
   margin-left: 20%;
+  margin-right: 20%;
   margin-top: 200px;
   animation-name: topFadeIn;
   animation-duration: 1s;
@@ -51,6 +57,7 @@ body{
 .welcome-text {
   font-family: 'Open Sans', sans-serif;
   margin-left: 20%;
+  margin-right: 20%;
   animation-name: leftFadeIn;
   animation-fill-mode: both;
   animation-delay: 1s;
