--- a/style.css
+++ b/style.css
@@ -1,10 +1,21 @@
-#background {
-    width: 100%;
-    height: 100%;
-    position: fixed;
-    left: 0px;
-    top: 0px;
-    z-index: -1; /* Ensure div tag stays behind content; -999 might work, too. */
+body {
+  animation: fade 5s infinite; /* animation-name followed by duration in seconds*/
+     /* you could also use milliseconds (ms) or something like 2.5s */
+  -webkit-animation: colorchange 5s infinite; /* Chrome and Safari */
+}
+
+@keyframes colorchange
+{
+  0%   {background: white;}
+  50%  {background: beige;}
+  100% {background: white;}
+}
+
+@-webkit-keyframes colorchange /* Safari and Chrome - necessary duplicate */
+{
+  0%   {background: white;}
+  50%  {background: beige;}
+  100% {background: white;}
 }
 
 @keyframes topFadeIn {
