--- a/website_style.css
+++ b/website_style.css
@@ -1,6 +1,22 @@
-body {
+html {
+  scroll-behavior: smooth;
 }
 
+#home {
+  padding-top: 250px;
+  padding-bottom: 360px;
+}
+
+#about {
+  padding-top: 250px;
+  padding-bottom: 250px;
+}
+
+#contact {
+  padding-top: 250px;
+  padding-bottom: 250px;
+  color: white;
+}
 @keyframes FadeIn {
       0% {
         opacity: 0;
@@ -35,7 +51,12 @@ body {
 
 .container-fluid {
   font-family: 'Open Sans', sans-serif;
-  background-color: transparent;
+  color: white;
+}
+
+.navbar-nav > li{
+  padding-left:10px;
+  padding-right:10px;
 }
 
 .animated-name h1{
@@ -45,7 +66,7 @@ body {
   font-family: Brush Script MT, Brush Script Std, cursive;
   margin-left: 20%;
   margin-right: 20%;
-  margin-top: 250px;
+  margin-top: 50px;
   animation-name: FadeIn;
   animation-duration: 1s;
 }
