--- a/website_style.css
+++ b/website_style.css
@@ -2,124 +2,103 @@ html {
   scroll-behavior: smooth;
 }
 body {
-  background-image: linear-gradient(to bottom right, #23344f, #5278a8,#283c5c);
+  /*background-image: linear-gradient(to bottom right, #23344f, #5278a8,#283c5c);*/
+  background: white;
 }
 
-@keyframes FadeIn {
+@keyframes FadeInAndOut {
       0% {opacity: 0;}
-      100% {opacity: 1;}
-}
-
-@keyframes hide {
-      0% {opacity: 0;}
+      20% {opacity: 1;}
+      80% {opacity: 1;}
       100% {opacity: 0;}
 }
 
-@keyframes typing {
-  from { max-width: 0 }
-  to { max-width: 100% }
+@keyframes FadeInAndOutLate {
+      0% {opacity: 0;}
+      70% {opacity: 1;}
+      80% {opacity: 1;}
+      100% {opacity: 0;}
 }
 
-@keyframes blink-caret {
-  from, to { border-color: transparent }
-  50% { border-color: white; }
-}
-/* NAVBAR */
-.container-fluid {
-  font-family: 'Open Sans', sans-serif;
+#intro-section{
+ position: relative;
+ background: gray;
+ width: 100%;
+ height: 100vh;
+ float:left;
+ z-index: 3;
 }
 
-.navbar-nav > li{
-  padding-left:10px;
-  padding-right:10px;
-}
-.navbar-inner {
-    background:transparent;
-}
-/* HOME */
-
-#home {
-  padding-top: 300px;
-  padding-bottom: 300px;
+.animated-name {
+  text-align: center;
+  margin-top: 18%;
 }
 
 .animated-name h1{
   font-size: 110px;
   color: white;
-  text-align: center;
   font-family: Brush Script MT, Brush Script Std, cursive;
-  animation-name: FadeIn;
-  animation-duration: 1s;
+  animation-name: FadeInAndOut;
+  animation-duration: 3s;
+  animation-fill-mode: forwards;
 }
 
-.animated-title h2{
-  position: absolute;
-  left: 50%;
-  transform: translateX(-50%);
+.animated-name p{
+  font-size: 30px;
   color: white;
-  font-size: 20px;
-  font-family: monaco, Consolas, "Lucida Console", monospace;
-  /*carat/typing animation*/
-  width: auto;
-  overflow: hidden;
-  border-right: .15em solid black;
-  white-space: nowrap;
-  margin: 0 auto;
-  letter-spacing: .20em;
-  animation: hide 1s,
-       typing 3.5s 1s steps(60, end),
-			 blink-caret .75s 1s step-end infinite;
+  font-family: Arial;
+  animation-name: FadeInAndOutLate;
+  animation-duration: 3s;
+  animation-fill-mode: forwards;
 }
-/* ABOUT */
-#about {
-  padding-top: 240px;
-  padding-bottom: 200px;
+
+#main-section{
+  position:absolute;
+  background: #853e3e;
+  width: 100%;
+  height: 100vh;
+  z-index: -1;
+}
+
+.navbar{
+  background-color: gray;
+  text-align: center;
+}
+
+.navbar-brand{
+  float:none;
+  font-size: 35px;
   color: white;
-}
-.image-card{
-  background-color: transparent;
-  border-color: transparent;
-  margin-left: auto;
-  margin-right: auto;
-  display:flex;
-  width: 300px;
-}
-.image-card img{
-  position: relative;
-  width:300px;
-  height:auto;
-}
-.about-card{
-  background-color: transparent;
-  border-color: transparent;
-  display:flex;
-  min-width: 200px;
-}
-.about-card h2{
-  position: relative;
-  font-size: 80px;
+  font-family: Brush Script MT, Brush Script Std, cursive;
+  animation-name: FadeInAndOut;
 }
 
-.about-card p{
-  position: relative;
-  font-size: 20px;
+.row{
+  width: 100%;
 }
 
-.icons-card{
-  margin-top: 20px;
-  background-color: transparent;
-  border-color: gray;
-  font-size: 6rem;
-}
-/* CONTACT */
-#contact {
-  padding-top: 50px;
-  padding-bottom: 50px;
-  color: white;
+.jumbotron{
+  background: beige !important;
+  height: 60vh;
+  margin-top: 30px;
+  margin-left: 30px;
+  margin-bottom: 30px;
 }
 
-.contact-box h3{
-  position: relative;
-  justify: center;
-  justify-content: center;
+.card{
+  background-color: #827070 !important;
+  height: 20vh;
+  width: 100%;
+  margin-left: 45px;
+  margin-right: 15px;
+  margin-top: 15px;
+}
+
+.card img{
+  height: auto;
+  width: 20%;
+}
+
+.link-col{
+  text-align: center;
 }
