--- a/website_style.css
+++ b/website_style.css
@@ -1,12 +1,11 @@
 
 html {
   scroll-behavior: smooth;
-
-  background: #853e3e;
+  background-image: url("./images/background.png");
+  background-color: white;
 }
 body {
   /*background-image: linear-gradient(to bottom right, #23344f, #5278a8,#283c5c);*/
-  background: white;
 }
 
 
@@ -55,7 +54,6 @@ body {
 
 #main-section{
   position:absolute;
-  background: #853e3e;
   width: 100%;
   height: 100%;
   z-index: -1;
