--- a/website_style.css
+++ b/website_style.css
@@ -81,12 +81,24 @@ body {
   margin-top: 30px;
   margin-left: 30px;
   margin-bottom: 30px;
+  font-size: 22px;
 }
 
 .jumbotron{
   background: beige !important;
   box-shadow: 10px 10px;
   min-height: 70vh;
+}
+
+.jumbotron h1{
+  font-size: 60px;
+  font-weight: 800;
+  font-family: Arial, Helvetica, sans-serif;
+  text-align: center;
+}
+.jumbotron p{
+  font-weight: 400;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .card{
@@ -99,8 +111,8 @@ body {
 .btn-group{
 }
 
+
 .btn-group img{
-  background-color: transparent;
   height: auto;
   width: 60%;
   padding: 5%;
@@ -115,4 +127,15 @@ body {
   width: 100%;
   min-width:450px;
   float: right;
+}
+
+.notice-card{
+  background: beige !important;
+  padding: 10px;
+  margin: auto;
+  width: 50%;
+  margin-bottom: 40px;
+  align-items: center;
+  font-size: 25px;
+  font-weight: bold;
 }
