--- a/V1/website_style.css
+++ b/V1/website_style.css
@@ -1,10 +1,10 @@
 
 html {
   scroll-behavior: smooth;
-  background-image: url("images/background.png");
+  background-image: url("images/Background.png");
+
 }
 body {
-  /*background-image: linear-gradient(to bottom right, #23344f, #5278a8,#283c5c);*/
 }
 
 
@@ -23,8 +23,8 @@ body {
 }
 
 #intro-section{
- position: relative;
- background: #2f384d;
+ position: absolute;
+ background-image: url("images/BackgroundIntro.png");
  width: 100%;
  height: 100vh;
  float:left;
@@ -41,14 +41,15 @@ body {
   color: white;
   font-family: Brush Script MT, Brush Script Std, cursive;
   animation-name: FadeInAndOut;
-  animation-duration: 3s;
+  animation-duration: 3.5s;
   animation-fill-mode: forwards;
 }
 
-#target, #cursor{
-  justify-content: center;
-  font-size: 30px;
+.typing{
   color: white;
+  animation-name: FadeInAndOut;
+  animation-duration: 3.5s;
+  animation-fill-mode: forwards;
 }
 
 #main-section{
